--- a/src/ilab_pro/WebRoot/WEB-INF/web.xml
+++ b/src/ilab_pro/WebRoot/WEB-INF/web.xml
@@ -3,7 +3,7 @@
   xmlns="http://xmlns.jcp.org/xml/ns/javaee"
   xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
   id="WebApp_ID" version="3.1">
-  <display-name>ilab_pro</display-name>
+  <display-name>ilab</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
